refactor(app) Changes names and location of folder
